# dandelion

./: CHANGELOG.md  Cargo.toml  README.md
benches/new/: main.rs  rngs.rs
benches/old/: doubledandelion.rs  main.rs  rngs.rs
benches/unified/: doubledandelion.rs  main.rs  rngs.rs
examples/: asm.rs  bench.rs  mini.rs  period.rs  rng-mini.rs  rng.rs  rng16x2.rs  rng32_16.rs  rng32x2.rs  rng64_32.rs
examples/period/: bmatrix.rs  main.rs
src/: int.rs  lib.rs
tests/: all.rs  unified.rs
