[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
categories = ["algorithms"]
description = "a high performance non-cryptographic random number generator"
edition = "2021"
keywords = ["random"]
license = "Artistic-2.0"
name = "dandelion-random"
repository = "https://github.com/apribadi/dandelion"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "dandelion"

[dependencies]
getrandom = { version = "0.3.1", optional = true }
rand_core = { version = "0.9.0", optional = true }

[dev-dependencies]
expect-test = "1.5.1"
rand = "0.9.0"
rand_pcg = "0.9.0"
rand_xoshiro = "0.7.0"

[features]
getrandom = ["dep:getrandom"] # Rng::from_operating_system
rand_core = ["dep:rand_core"] # rand_core::{RngCore,SeedableRng}
std = []
thread_local = ["getrandom", "std"] # dandelion::thread_local

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
