[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
categories = ["algorithms"]
description = "a high performance non-cryptographic random number generator"
edition = "2024"
keywords = ["random", "prng", "rng"]
license = "Artistic-2.0"
name = "dandelion-random"
repository = "https://github.com/apribadi/dandelion"
version = "0.4.0"

[features]
getrandom = ["dep:getrandom"] # dandelion::Rng::from_operating_system
rand_core = ["dep:rand_core"] # rand_core::{TryRng,Rng,SeedableRng}
std = []
thread_local = ["getrandom", "std"] # dandelion::thread_local

[lib]
name = "dandelion"

[[bench]]
name = "unified"
harness = false

[[bench]]
name = "old"
harness = false

[[example]]
name = "asm"
crate-type = ["lib"]

[dependencies]
getrandom = { version = "0.4.2", optional = true }
rand_core = { version = "0.10.1", optional = true }

[dev-dependencies]
divan = "0.1.21"
expect-test = "1.5.1"
rand = "0.10.1"
rand_pcg = "0.10.2"
rand_xoshiro = "0.8.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[package.metadata.docs.rs]
all-features = true
